Code was changed according to the comments.