@@ -2,11 +2,12 @@ package school.faang.user_service.controller.recommendation;
 
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Controller;
+import org.apache.commons.lang3.StringUtils;
 import school.faang.user_service.dto.RecommendationRequestDto;
 import school.faang.user_service.dto.RecommendationRequestRcvDto;
 import school.faang.user_service.dto.RejectionDto;
 import school.faang.user_service.dto.RequestFilterDto;
-import school.faang.user_service.service.RecommendationRequestServiceImpl;
+import school.faang.user_service.service.recommendation.RecommendationRequestServiceImpl;
 
 import java.util.List;
 
@@ -19,14 +20,14 @@ public class RecommendationRequestController {
         if (requestDto == null) {
             throw new IllegalArgumentException("requestDto cannot be null");
         }
-        if (requestDto.getMessage() == null || requestDto.getMessage().isBlank()) {
+        if (StringUtils.isBlank(requestDto.message())) {
             throw new IllegalArgumentException("Message cannot be empty");
         }
-        return recommendationRequestService.create(requestDto);
+        return recommendationRequestService.createRequest(requestDto);
     }
 
-    public List<RecommendationRequestDto> getRecommendationRequests(RequestFilterDto filter) {
-        return recommendationRequestService.getRequests(filter);
+    public List<RecommendationRequestDto> getRecommendationRequests(RequestFilterDto filters) {
+        return recommendationRequestService.getRequests(filters);
     }
 
     public RecommendationRequestDto getRecommendationRequest(long id) {
@@ -37,7 +38,7 @@ public class RecommendationRequestController {
         if (rejectionDto == null) {
             throw new IllegalArgumentException("rejectionDto cannot be null");
         }
-        if (rejectionDto.getReason() == null || rejectionDto.getReason().isBlank()) {
+        if (StringUtils.isBlank(rejectionDto.reason())) {
             throw new IllegalArgumentException("Reason cannot be empty");
         }
         return recommendationRequestService.rejectRequest(id, rejectionDto);
